# calt

./: CMakeLists.txt  Dockerfile  Dockerfile2  Makefile  docker-compose.yaml
Headers/: blom.h  certificates.h  common.h  communication.h  crypto_sig.h  mutex_var.h
Sources/: CMakeLists.txt  blom.cpp  certificates.cpp  communication.cpp  crypto_sig.cpp
Sources/client/: Makefile  main.cpp
Sources/master/: Makefile  main.cpp
include/breep/network/: basic_peer.hpp  basic_peer_manager.hpp
pca/: Dockerfile  Makefile  README.md  server
pca/Config/: .gitignore  config.cfg
pca/Doc/: CaLayer.md  Logclient  Logserver  ToDo.md
pca/Headers/: cert.hpp  client.hpp  cmessage.hpp  common.hpp  cqueue.hpp
pca/Scripts/: clear.sh  clearclient.sh  client.sh  header.sh  openssl.cnf  setup.sh
pca/Sources/: cert.cpp  client.cpp  clientcert.cpp  common.cpp  server.cpp
pca/Test/TestCert/: Makefile  test.out  testcert.cpp
pca/Test/TestClient/: Makefile  test.out  testclient.cpp
pca/Test/TestCqueue/: Makefile  test.out  testcqueue.cpp
pca/Test/TestException/: test.out  testexception.cpp
pca/Test/TestOfstream/: test.out  testofstream.cpp
pca/Test/TestOthers/: charx.cpp  test.out
pca/Test/TestPopen/: test.out  testpopen.cpp
pca/Test/TestReq/: test.out  testreq.cpp
pca/Test/TestSo/: Makefile  test.out  testso.cpp
pca/libsoclient.so.dSYM/Contents/: Info.plist
pca/server.dSYM/Contents/Resources/DWARF/: server
